--- a/dashboard.css
+++ b/dashboard.css
@@ -1,460 +1,431 @@
+.clearfix{
+	clear: both;
+}
+
+#main {
+  padding: 3% 3%;
+  margin-bottom: 30px;
+  padding-top: 2%;
+}
+.head{
+	padding:20px;
+}
 body{
-font-family: 'Montserrat',  'sans-serif';
-}
-
-header,
-section {
-  overflow-x: hidden;
-  left: 100px;
-}
-header img {
-    height: 80px;
-    margin-left: -110px;
-}
-
-.container{
-  background-attachment: white;
-  width: 100%;
-}
-.section-0{
-  background-color: #37bbe454;
-  text-align: center;
-  width: 100%;
-  font-family: Montserrat;
-  font-size: small;
-}
-
-.section-0 img{
-  height: 300px;
-  width: 360px;
-  /* left: 70%; */
-}
-
-
-.container-hero
-{
-  background-color: rgb(192, 198, 201);
-  padding-left: 3%;
-  text-align: center;
-}
-
-/* #login-btn
-{
+  font-family: 'Montserrat',  'sans-serif';
+  }
   
-  margin-top: 2px;
-  margin-left: 0%;
-} */
-
-/* .navbar-collapse{
-  height: auto;
-  position: relative;
-  z-index: 1;
-} */
-
-.my-button{
-  width:200px;
-  height:80px;
-  font-size:30px;
-  /* font-family: 'Times New Roman', Times, serif; */
-  background-color:#6ab1bc;
-  color: black;
-  border:0px;
-  margin-right: 100px;
-  box-shadow: 1px rgb(121, 116, 116);;
-  border-radius: 10px;
-  margin-left: 230px;
-  text-size-adjust: 40;
-  display: inline-block;
-  position: relative;
-}
-.my-button-2{
-  width:200px;
-  height:80px;
-  font-size:30px;
-  /* font-family: 'Times New Roman', Times, serif; */
-  background-color:#e8da5f;
-  color: black;
-  border:0px;
-  margin-right: 130px;
-  box-shadow: 10px rgb(96, 93, 93);
-  border-radius: 10px;
-  margin-left: 100px;
-  text-size-adjust: 40;
-  display: inline-block;
-}
-.my-button-3{
-  width:200px;
-  height:80px;
-  font-size:30px;
-  font-family: 'Times New Roman', Times, serif;
-  background-color:#ad77aa;
-  color: black;
-  border:0px;
-  box-shadow: 1px rgb(121, 116, 116);
-  border-radius: 10px;
-  margin-right: 100px;
-  display: inline-block;
-}
-.overlay{
-  text-align: center;
-  font-size: medium;
+  header,
+  section {
+    overflow-x: hidden;
+    left: 100px;
+  }
+  header img {
+      height: 80px;
+      margin-left: -110px;
+  }
   
-}
-.gallery{
-  display: flex;
-  justify-content: center;
-  top: 40px;
-  align-items: center;
- 
-}
-
-.gallery-section{
-  position: relative;
-}
-.gallery-section img{
-  width: 150%;
-  height: 40%;
-  position: absolute;
-}
-.Image1{
-  left: 5em;
-}
-.Image2{
-  left: 10rem;
-  top: 1rem;
-}
-.Image3{
-  left: 15rem;
-  top: 2rem;
-}
-.gallery-section img:hover{
-  z-index:20;
+  .container{
+    background-attachment: white;
+    width: 100%;
+  }
+  .section-0{
+    background-color: #37bbe454;
+    text-align: center;
+    width: 100%;
+    font-family: Montserrat;
+    font-size: small;
+  }
   
-}
-.gallery-section:hover img:not(:hover){
-  transform:scale(.9)
-}
-@media screen and (max-width:500px){
+  .section-0 img{
+    height: 300px;
+    width: 360px;
+    /* left: 70%; */
+  }
+  
+  
+  .container-hero
+  {
+    background-color: rgb(192, 198, 201);
+    padding-left: 3%;
+    text-align: center;
+  }
+  
+  /* #login-btn
+  {
+    
+    margin-top: 2px;
+    margin-left: 0%;
+  } */
+  
+  /* .navbar-collapse{
+    height: auto;
+    position: relative;
+    z-index: 1;
+  } */
+  
+  .my-button{
+    width:200px;
+    height:80px;
+    font-size:30px;
+    /* font-family: 'Times New Roman', Times, serif; */
+    background-color:#6ab1bc;
+    color: black;
+    border:0px;
+    margin-right: 100px;
+    box-shadow: 1px rgb(121, 116, 116);;
+    border-radius: 10px;
+    margin-left: 230px;
+    text-size-adjust: 40;
+    display: inline-block;
+    position: relative;
+  }
+  .my-button-2{
+    width:200px;
+    height:80px;
+    font-size:30px;
+    /* font-family: 'Times New Roman', Times, serif; */
+    background-color:#e8da5f;
+    color: black;
+    border:0px;
+    margin-right: 130px;
+    box-shadow: 10px rgb(96, 93, 93);
+    border-radius: 10px;
+    margin-left: 100px;
+    text-size-adjust: 40;
+    display: inline-block;
+  }
+  .my-button-3{
+    width:200px;
+    height:80px;
+    font-size:30px;
+    font-family: 'Times New Roman', Times, serif;
+    background-color:#ad77aa;
+    color: black;
+    border:0px;
+    box-shadow: 1px rgb(121, 116, 116);
+    border-radius: 10px;
+    margin-right: 100px;
+    display: inline-block;
+  }
+  .overlay{
+    text-align: center;
+    font-size: medium;
+    
+  }
+  .gallery{
+    display: flex;
+    justify-content: center;
+    top: 40px;
+    align-items: center;
+   
+  }
+  
+  .gallery-section{
+    position: relative;
+  }
+  .gallery-section img{
+    width: 150%;
+    height: 40%;
+    position: absolute;
+  }
   .Image1{
-    left:5rem;
+    left: 5em;
   }
   .Image2{
-    left:7rem;
+    left: 10rem;
+    top: 1rem;
   }
   .Image3{
-    left:10rem;
+    left: 15rem;
+    top: 2rem;
+  }
+  .gallery-section img:hover{
+    z-index:20;
+    
+  }
+  .gallery-section:hover img:not(:hover){
+    transform:scale(.9)
+  }
+  @media screen and (max-width:500px){
+    .Image1{
+      left:5rem;
+    }
+    .Image2{
+      left:7rem;
+    }
+    .Image3{
+      left:10rem;
+    }
+  }
+  .gallery-item-1:hover{
+    transform: scale(1.1);
+  }
+  .gallery-item{
+    border-radius: 0%;
+     margin-top: 50;
+     margin-left: 50;
+     margin-right: 50;
+     margin-bottom: 50;
+     height: 70vh;
+     transition: transform 0.3s ease-in-out;
+  }
+  p{
+     text-align: justify;
+     font-size: medium;
+     display: block;
+  }
+  .bannertext{
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+  .bannerimage{
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+  /* .container-fluid
+  {
+    position: absolute;
+    z-index: 1;
+  
+  } */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: whitesmoke;
+    min-width: 160px;
+    box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
+    z-index: 11;
+  }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #dee2e6;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  header .nav-item:last-child {
+    padding-right: 10.5em;
+  }
+  
+  .logoimg{
+    vertical-align: middle;
+    border-style: none;
+    height: 80px;
+    width: auto;
+    padding-left: 2rem;
+  }
+  
+  header .nav-link:hover {
+    color: black;
+  }
+  
+  .nav-item a {
+    color: black;
+  }
+  
+  .nav-item a:hover {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* here */
+  
+   header .row .col-md-7 {
+    padding: 22vmin 1vmin;
+    padding-bottom: 35vmin;
+  }
+  
+  header .row .col-md-5 {
+    padding: 4.2vmin 1vmin;
+  }
+  
+  header .row .col-md-5 img {
+    width: 90%;
+  }
+  
+  header .container .col-md-7 h6 {
+    padding: 1vmin;
+    letter-spacing: 4px;
+  }
+  
+  header .container .col-md-7 h1 {
+    font-size: 8.5vmin;
+    font-weight: bold;
+    padding: 0.1em 0em;
+  }
+  
+  header .container .col-md-7 p {
+    padding: 1vmin 5vmin;
+  } 
+  .primary-btn {
+    border-radius: 30px;
+    font-weight: bold;
+  }
+  
+.col-div-6{
+	width: 50%;
+	float: left;
+  margin-bottom: 3%;
+}
+
+.col-div-3{
+	width: 25%;
+	float: left;
+}
+.box{
+	width: 85%;
+	height: 100px;
+	background-color: #007cad;
+	margin-left: 10px;
+	padding:10px;
+}
+.box:hover{
+  color:rgb(255, 255, 255);
+  background-color: #03b7fe;;
+}
+.box:hover .box p{
+  color:white;
+}
+.box:hover .box p span{
+  color:white;
+}
+.box:hover .box-icon{
+  color:white;
+}
+.box p{
+	 font-size: 35px;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    line-height: 30px;
+    padding-left: 10px;
+    margin-top: 20px;
+    display: inline-block;
+}
+.box p span{
+	font-size: 20px;
+	font-weight: 400;
+	color:white;
+}
+.box-icon{
+	font-size: 40px!important;
+    float: right;
+    margin-top: 35px!important;
+    color: #00259f;
+    padding-right: 10px;
+}
+.col-div-8{
+	width: 70%;
+	float: left;
+}
+.col-div-4{
+	width: 30%;
+	float: left;
+}
+.content-box{
+	padding: 20px;
+}
+.content-box p{
+	margin: 0px;
+    font-size: 20px;
+    color:#ffffff;
+}
+.content-box p span{
+	float: right;
+    background-color:#0092cc;
+    padding: 3px 10px;
+    font-size: 15px;
+}
+.content-box p span:hover{
+  color:white;
+  background-color:#03b7fe ;
+}
+.box-8, .box-4{
+	width: 95%;
+	background-color: #007cad;
+	height: 440px;
+	
+}
+
+
+.box-8{
+	margin-left: 10px;
+}
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  
+}
+ th {
+  text-align: left;
+  padding:15px;
+  color: #ffffff;
+  border-bottom: 3px solid #001f38cb;
+}
+ td {
+  text-align: left;
+  padding:10px;
+  color: #fff;
+  border-bottom: 3px solid #001f38cb;
+}
+.circle-wrap {
+  margin: 50px auto;
+  width: 200px;
+  height: 200px;
+  background: #e6e2e7;
+  border-radius: 50%;
+}
+.circle-wrap .circle .mask,
+.circle-wrap .circle .fill {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  border-radius: 50%;
+}
+.circle-wrap .circle .mask {
+  clip: rect(0px, 200px, 200px, 100px);
+}
+
+.circle-wrap .circle .mask .fill {
+  clip: rect(0px, 200px, 200px, 100px);
+  background-color: #00259f;
+}
+.circle-wrap .circle .mask.full,
+.circle-wrap .circle .fill {
+  animation: fill ease-in-out 3s;
+  transform: rotate(126deg);
+}
+
+@keyframes fill {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(126deg);
   }
 }
-.gallery-item-1:hover{
-  transform: scale(1.1);
-}
-.gallery-item{
-  border-radius: 0%;
-   margin-top: 50;
-   margin-left: 50;
-   margin-right: 50;
-   margin-bottom: 50;
-   height: 70vh;
-   transition: transform 0.3s ease-in-out;
-}
-p{
-   text-align: justify;
-   font-size: medium;
-   display: block;
-}
-.bannertext{
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
-.bannerimage{
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
-/* .container-fluid
-{
-  position: absolute;
-  z-index: 1;
-
-} */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: whitesmoke;
-  min-width: 160px;
-  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
-  z-index: 11;
-}
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #dee2e6;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-header .nav-item:last-child {
-  padding-right: 10.5em;
-}
-
-.logoimg{
-  vertical-align: middle;
-  border-style: none;
-  height: 80px;
-  width: auto;
-  padding-left: 2rem;
-}
-
-header .nav-link:hover {
-  color: black;
-}
-
-.nav-item a {
-  color: black;
-}
-
-.nav-item a:hover {
-  color: black;
-  text-decoration: none;
-}
-
-/* here */
-
- header .row .col-md-7 {
-  padding: 22vmin 1vmin;
-  padding-bottom: 35vmin;
-}
-
-header .row .col-md-5 {
-  padding: 4.2vmin 1vmin;
-}
-
-header .row .col-md-5 img {
-  width: 90%;
-}
-
-header .container .col-md-7 h6 {
-  padding: 1vmin;
-  letter-spacing: 4px;
-}
-
-header .container .col-md-7 h1 {
-  font-size: 8.5vmin;
-  font-weight: bold;
-  padding: 0.1em 0em;
-}
-
-header .container .col-md-7 p {
-  padding: 1vmin 5vmin;
-} 
-.primary-btn {
-  border-radius: 30px;
-  font-weight: bold;
-}
-
-/********** section 1 **************/
-
-.section-1 {
-  padding: 6vmin 0vmin;
-}
-
-
-/*  Section 2  */
-
-.cover {
-  width: 100%;
-  height: 140px;
-  /* background-image: url("img/feature/3.jpg"); */
-  /* background-color: grey;
-  background-position: -24rem -19rem;
-  background-size: 150%;
-  position: relative; */
-}
-
-/* .cover .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-} */
-
-.cover .content {
-  width: 100%;
-  /* height: 100%; */
-  background-color: white;
-  /* padding-top: 19vmin; */
-}
-
-.cover .content > h1 {
-  font-family: var(--Patua);
-  font-size: 6vmin;
-  color: rgb(0, 0, 0);
-}
-
-.cover .content > p {
-  font-family: var(--Rubik);
-  font-size: 2vmin;
-  color: #000000;
-}
-.feature{
-  width: 120px;
-  height: 150px;
-}
-
-/* .numbers .rect {
-  position: relative;
-  z-index: 1;
-  background: rgb(255, 255, 255);
-  width: 17rem;
-  height: 17rem;
-  padding-top: 3.5vmin;
-  margin: 1rem
-  border-radius: 0.5em;
-  box-shadow: 1px 2px 50px 0px rgba(0, 191, 255, 0.484);
-} */
-
-/* .numbers {
-  margin-top: -15vmin;
-}
-
-.numbers .rect h1 {
-  font-size: 5rem;
-  color: rgb(71, 181, 255);
-}
-
-.numbers .rect > p {
-  font-family: var(--Patua);
-} */
-
-.purchase > h1 {
-  padding-top: 15vmin;
-  padding-bottom: 0.1em;
-  font-family: var(--Lobster);
-}
-
-.purchase > p {
-  color: var(--light-black);
-  font-size: 3vmin;
-  padding-bottom: 10vmin;
-}
-
-/* .purchase .cards .card {
-  width: 22rem;
-  margin: 3vmin 3vmin;
-}
-
-.cards div {
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-}
-
-.cards .title {
-  background: rgba(208, 241, 241, 0.199);
-  padding: 1.4em 2.5em;
-  font-size: 2vmin;
-}
-
-.card .card-text-index {
-  padding: 2.5rem 3rem;
-  color: var(--light-black);
-}
-.card-body{
-    cursor: pointer;
-}
-.card-body .pricing {
-  background: rgba(3, 213, 250, 0.501);
-  border-top-right-radius: 170px;
-  border-top-left-radius: 170px;
-}
-
-.card-body .pricing > h1 {
-  font-size: 4vmin;
-  padding: 1em 0.5em;
-} */
-
-/* Section 3 */
-
-.section-3 {
-  height: 70vmin;
-  margin-top: 15vmin;
-  background: var(--bggradient);
-}
-
-.section-3 .col-md-12 > h1 {
-  padding: 2em 0 0.5em 0;
-  color: rgb(0, 0, 0);
-  font-size: 6vmin;
-}
-
-.section-3 .col-md-12 > p {
-  padding: 0 4em;
-  padding-bottom: 2em;
-  color: var(--light-gray);
-  font-size: 3vmin;
-}
-
-.section-3 .desktop {
-  background: rgba(140, 236, 255, 0.903);
-  display: inline-block;
-  border-radius: 3em;
-  padding: 2vmin 4.5vmin;
-  margin: 1em;
-}
-
-.section-3 .desktop h3 {
-  font-size: 4vmin;
-}
-
-.section-3 .desktop p {
-  font-size: 2vmin;
-}
-
-/* Section Team */
-
-.section-4 .container h1 {
-  font-size: 6vmin;
-  padding-top: 14vmin;
-}
-
-.text-secondary {
+.circle-wrap .inside-circle {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  background: #03b7fe;
+  line-height: 180px;
   text-align: center;
+  margin-top: 10px;
+  margin-left: 10px;
+  position: absolute;
+  z-index: 100;
+  font-weight: 700;
+  font-size: 2em;
 }
-
-/* .section-4 .team {
-  padding: 10vmin 4vmin;
-} */
-
-.section-4 .card {
-  width: 22em;
-  margin-top: 10vmin;
-}
-
-.section-4 .card .card-text-index {
-  padding: 0.5em;
-}
-
-.section-4 .card-body > a {
-  font-size: 1.5em;
-}
-
-.section-4 .carousel-item {
-  padding-left: 3rem;
-}
-
-.border-radius {
-  border-radius: 340px;
-  width: 60%;
-}
-
 footer {
   background: rgba(0, 0, 0, 0.815);
   overflow-x: hidden;
@@ -551,12 +522,12 @@ width: 98%;
 position: absolute;
 top: 0;
 left: 0;
-height: 330px;
+height: 100px;
 background-size: cover;
 background-position: 100% 100%;
 }
 .footer-logo {
-margin-bottom: 30px;
+margin-bottom: 70px;
 }
 .footer-logo img {
   max-width: 200px;
@@ -632,10 +603,6 @@ margin-bottom: 12px;
 }
 .footer-widget ul li a:hover{
 color: #34d0e5;
-}
-.img-fluid {
-  max-width: 100%;
-  height: 100px;
 }
 .footer-widget ul li a {
 color: white;
