--- a/css/winners.css
+++ b/css/winners.css
@@ -2,255 +2,281 @@ body{
     width: 100%;
     height:100%;
 }
-.ev-1-h1{
-    font-size:xx-large;
-    font-weight: bold;
-    text-align: center;
-    justify-content: center;
-    background-image: url("bg.gif");
-    background-color: #cccccc;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-    color: goldenrod;    
-    padding:0px;
-}
-.event-1{
-    display: flex;
-    flex-direction: column;
-    width:100%;
-    height:100%;
-}
-.event-1 > div{
-    margin:0px;
-}
+/* header */
 
-
-
-/* Hackathon */
-.ev-1-1{
-    background-color: #cce1f1;
-    border: #cce1f1;
-    background-size: 100% 100%;
-    border-radius: 3px;
+#main {
+  padding: 3% 3%;
+  margin-bottom: 30px;
+  padding-top: 2%;
 }
-.ev-1-1 h2{
-    font-size:60px;
-    font-weight: bold;
-    text-align: center;
-    color:blue;
-    background: rgb(122, 186, 247);
+.head{
+	padding:20px;
 }
-.ev-1-1-cards{
-    display:flex;
-    position:relative;
-    flex-direction: row;
-    background-color: #cce1f1;
-}
-.ev-1-1-cards > div{
-    margin-left:100px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-/* First prize  */
-.prize-1{
-    background-color: aqua;
-    background-size: 100% 100%;
-    border-radius: 3px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    max-width:500px;
-    max-height: 600px;
-}
-
-.fig1-prize figcaption{
-    font-size: 40px;;
-    font-weight: bold;
-    color:rgb(8, 8, 165);
-    text-align: center;
-    padding-top:20px;
-}
-
-.fig1-prize img{
-    margin-top: 50px;
-}
-.fig1-participants{
-    display:flex;
-    flex-direction: row;
-    text-align: center;
-    
-}
-.fig1-participants img{
-    width:130px;
-    height:130px;
-}
-.fig1-participant1{
-    margin-top:0px;
-}
-.fig1-participant2{
-    margin-top:0px;
-    margin-left:-30px;
-}
-.fig1-participant3 {
-    margin-top:0px;
-    margin-left:-30px;
-}
-.fig1-college p{
-    color:rgb(8, 8, 165);
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    padding-top: 0px;
-}
-/* Second prize  */
-.prize-2{
-    background-color: aqua;
-    background-size: 100% 100%;
-    border-radius: 3px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    max-width:500px;
-    max-height: 600px;
-}
-
-.fig2-prize figcaption{
-    font-size: 40px;;
-    font-weight: bold;
-    color:rgb(8, 8, 165);
-    text-align: center;
-    padding-top:20px;
-}
-.fig2-prize img{
-    margin-top: 50px;
-}
-.fig2-participants{
-    display:flex;
-    flex-direction: row;
-    text-align: center;
-}
-.fig2-participants img{
-    width:130px;
-    height:130px;
-}
-.fig2-participant1{
-    margin-top:0px;
-}
-.fig2-participant2{
-    margin-top:0px;
-    margin-left:-30px;
-}
-.fig2-participant3 {
-    margin-top:0px;
-    margin-left:-30px;
-}
-.fig2-college p{
-    color:rgb(8, 8, 165);
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    padding-top: 0px;
-}
-
-
-/* Ideathon */
-.ev-1-2{
-    background-color:#cce1f1 ;
-    border: #cce1f1;
-    background-size: 100% 100%;
-    border-radius: 3px;
-    text-align: center;
-    justify-content: center;
-}
-.ev-1-2 h2{
-    font-size:60px;
-    font-weight: bold;
-    text-align: center;
-    color:blue;
-    background: rgb(122, 186, 247);
-}
-.ev-1-2-cards{
-    display:flex;
-    position:relative;
-    flex-direction: row;
-    background-color: #cce1f1;
-}
-.ev-1-2-cards > div{
-    margin-left:5px;
-}
-/* First prize  */
-.ev-1-2-prize-1{
-    background-color: aqua;
-    background-size: 100% 100%;
-    border-radius: 3px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    max-width:500px;
-    max-height: 600px;
-    
-    header .nav-item:last-child {
-      padding-right: 10.5em;
-    }
-    
-    .logoimg{
-      vertical-align: middle;
-      border-style: none;
+body{
+  font-family: 'Montserrat',  'sans-serif';
+  }
+  
+  header,
+  section {
+    overflow-x: hidden;
+    left: 100px;
+  }
+  header img {
       height: 80px;
-      width: auto;
-      padding-left: 2rem;
-    }
+      margin-left: -110px;
+  }
+  
+  .container{
+    background-attachment: white;
+    width: 100%;
+  }
+  .section-0{
+    background-color: #37bbe454;
+    text-align: center;
+    width: 100%;
+    font-family: Montserrat;
+    font-size: small;
+  }
+  
+  .section-0 img{
+    height: 300px;
+    width: 360px;
+    /* left: 70%; */
+  }
+  
+  
+  .container-hero
+  {
+    background-color: rgb(192, 198, 201);
+    padding-left: 3%;
+    text-align: center;
+  }
+  
+  /* #login-btn
+  {
     
-    header .nav-link:hover {
-      color: black;
-    }
+    margin-top: 2px;
+    margin-left: 0%;
+  } */
+  
+  /* .navbar-collapse{
+    height: auto;
+    position: relative;
+    z-index: 1;
+  } */
+  
+  .my-button{
+    width:200px;
+    height:80px;
+    font-size:30px;
+    /* font-family: 'Times New Roman', Times, serif; */
+    background-color:#6ab1bc;
+    color: black;
+    border:0px;
+    margin-right: 100px;
+    box-shadow: 1px rgb(121, 116, 116);;
+    border-radius: 10px;
+    margin-left: 230px;
+    text-size-adjust: 40;
+    display: inline-block;
+    position: relative;
+  }
+  .my-button-2{
+    width:200px;
+    height:80px;
+    font-size:30px;
+    /* font-family: 'Times New Roman', Times, serif; */
+    background-color:#e8da5f;
+    color: black;
+    border:0px;
+    margin-right: 130px;
+    box-shadow: 10px rgb(96, 93, 93);
+    border-radius: 10px;
+    margin-left: 100px;
+    text-size-adjust: 40;
+    display: inline-block;
+  }
+  .my-button-3{
+    width:200px;
+    height:80px;
+    font-size:30px;
+    font-family: 'Times New Roman', Times, serif;
+    background-color:#ad77aa;
+    color: black;
+    border:0px;
+    box-shadow: 1px rgb(121, 116, 116);
+    border-radius: 10px;
+    margin-right: 100px;
+    display: inline-block;
+  }
+  .overlay{
+    text-align: center;
+    font-size: medium;
     
-    .nav-item a {
-      color: black;
-    }
+  }
+  .gallery{
+    display: flex;
+    justify-content: center;
+    top: 40px;
+    align-items: center;
+   
+  }
+  
+  .gallery-section{
+    position: relative;
+  }
+  .gallery-section img{
+    width: 150%;
+    height: 40%;
+    position: absolute;
+  }
+  .Image1{
+    left: 5em;
+  }
+  .Image2{
+    left: 10rem;
+    top: 1rem;
+  }
+  .Image3{
+    left: 15rem;
+    top: 2rem;
+  }
+  .gallery-section img:hover{
+    z-index:20;
     
-    .nav-item a:hover {
-      color: black;
-      text-decoration: none;
+  }
+  .gallery-section:hover img:not(:hover){
+    transform:scale(.9)
+  }
+  @media screen and (max-width:500px){
+    .Image1{
+      left:5rem;
     }
-    
-    /* here */
-    
-     header .row .col-md-7 {
-      padding: 22vmin 1vmin;
-      padding-bottom: 35vmin;
+    .Image2{
+      left:7rem;
     }
-    
-    header .row .col-md-5 {
-      padding: 4.2vmin 1vmin;
+    .Image3{
+      left:10rem;
     }
-    
-    header .row .col-md-5 img {
-      width: 90%;
-    }
-    
-    header .container .col-md-7 h6 {
-      padding: 1vmin;
-      letter-spacing: 4px;
-    }
-    
-    header .container .col-md-7 h1 {
-      font-size: 8.5vmin;
-      font-weight: bold;
-      padding: 0.1em 0em;
-    }
-    
-    header .container .col-md-7 p {
-      padding: 1vmin 5vmin;
-    } 
-    .primary-btn {
-      border-radius: 30px;
-      font-weight: bold;
-    }
-/* header ending*/
-    /* footer*/
-    footer {
+  }
+  .gallery-item-1:hover{
+    transform: scale(1.1);
+  }
+  .gallery-item{
+    border-radius: 0%;
+     margin-top: 50;
+     margin-left: 50;
+     margin-right: 50;
+     margin-bottom: 50;
+     height: 70vh;
+     transition: transform 0.3s ease-in-out;
+  }
+  p{
+     text-align: justify;
+     font-size: medium;
+     display: block;
+  }
+  .bannertext{
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+  .bannerimage{
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+  /* .container-fluid
+  {
+    position: absolute;
+    z-index: 1;
+  
+  } */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: whitesmoke;
+    min-width: 160px;
+    box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
+    z-index: 11;
+  }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #dee2e6;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  header .nav-item:last-child {
+    padding-right: 10.5em;
+  }
+  
+  .logoimg{
+    vertical-align: middle;
+    border-style: none;
+    height: 80px;
+    width: auto;
+    padding-left: 2rem;
+  }
+  
+  header .nav-link:hover {
+    color: black;
+  }
+  
+  .nav-item a {
+    color: black;
+  }
+  
+  .nav-item a:hover {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* here */
+  
+   header .row .col-md-7 {
+    padding: 22vmin 1vmin;
+    padding-bottom: 35vmin;
+  }
+  
+  header .row .col-md-5 {
+    padding: 4.2vmin 1vmin;
+  }
+  
+  header .row .col-md-5 img {
+    width: 90%;
+  }
+  
+  header .container .col-md-7 h6 {
+    padding: 1vmin;
+    letter-spacing: 4px;
+  }
+  
+  header .container .col-md-7 h1 {
+    font-size: 8.5vmin;
+    font-weight: bold;
+    padding: 0.1em 0em;
+  }
+  
+  header .container .col-md-7 p {
+    padding: 1vmin 5vmin;
+  } 
+  .primary-btn {
+    border-radius: 30px;
+    font-weight: bold;
+  }
+
+/* header ended*/
+
+/* Footer/*
+
+footer {
   background: rgba(0, 0, 0, 0.815);
   overflow-x: hidden;
   /* padding: 14vmin 18vmin; */
@@ -452,38 +478,19 @@ color: #fff;
   top: 0;
   color: white;
 }
-.ev-1-2-fig3-college p{
-    color:rgb(8, 8, 165);
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-}*/
-
-
-
-
-/* Coding Competition*/
-.ev-1-3{
-    background-color:#cce1f1 ;
-    border: #cce1f1;
-    background-size: 100% 100%;
-    border-radius: 3px;
-    text-align: center;
-    justify-content: center;
-    padding-bottom:50px;
+.subscribe-form button i {
+color: #fff;
+font-size: 22px;
+transform: rotate(-6deg);
 }
-
-.ev-1-3 h2{
-    font-size:60px;
-    font-weight: bold;
-    text-align: center;
-    color:blue;
-    background: rgb(122, 186, 247);
+.copyright-area{
+background: #202020;
 }
-.ev-1-3-cards{
-    display:flex;
-    flex-direction: row;
-    background-color: #cce1f1;
+.copyright-text p {
+margin-top: 4%;
+font-size: 14px;
+color: white;
+text-align: left;
 }
 .copyright-text p a{
 color: #24bbda;
@@ -743,4 +750,5 @@ i{
 .past-event-heading{
   text-align: left;
 }
-/* footer*/
+
+/* footer ended*/
