--- a/css/winners_page.css
+++ b/css/winners_page.css
@@ -25,10 +25,16 @@
       .wrapper {
         background-color: #fff;
         width: 100%;
+        height: 100%;
         margin: 0 auto;
         padding: 50px 0;
         transition: all .3s ease;
       }
+      /*event banner*/
+      .evebanner img{
+        width:100%;
+      }
+      /*end of event*/
       
       .card-title {
         font-size: 30px;
@@ -73,21 +79,67 @@
       .back {
         background-color:#03b7fe;
       }
+      
+      /*Front of cards*/
       .front1{
         background-image: url('Krishi1.jpg');
         background-size: cover;
-        height:300px;
-        width:200px;
+        height:200px;
+        width:165px;
         border-radius: 10px 10px 10px 10px;
         background-repeat:no-repeat;
         text-align: center;
         justify-content: center;
       }
-      .front1 p{
-        padding-top:100px;
-        font-weight: solid black;
+      .front2{
+        background-image: url('hack1.jpg');
+        background-size: cover;
+        height:200px;
+        width:165px;
+        border-radius: 10px 10px 10px 10px;
+        background-repeat:no-repeat;
+        text-align: center;
+        justify-content: center;
       }
-      
+      .front3{
+        background-image: url('ideathon1.jpg');
+        background-size: cover;
+        height:200px;
+        width:165px;
+        border-radius: 10px 10px 10px 10px;
+        background-repeat:no-repeat;
+        text-align: center;
+        justify-content: center;
+      }
+      .front4{
+        background-image: url('coding.jpg');
+        background-size: cover;
+        height:180px;
+        width:165px;
+        border-radius: 10px 10px 10px 10px;
+        background-repeat:no-repeat;
+        text-align: center;
+        justify-content: center;
+      }
+      /*End of front of cards*/
+
+      /*back of cards*/
+      .inner_p{
+        color:white;
+        font-weight: 500;
+        font-size:15px;
+        width: 100%;
+      }
+      /*end of back of cards*/
+
+      /*start of intro*/
+      .inner_p_1{
+        font-size: 13px;
+        font-weight: 500;
+        width:100%;
+      }
+      /*end of intro*/
+
       .front:after {
         position: absolute;
         top: 0;
@@ -98,7 +150,7 @@
         content: '';
         display: block;
         opacity: 1;
-        background-color: #efefef;
+        background-color: #5ca2ca;
         backface-visibility: hidden;
         border-radius: 10px;
       }
@@ -148,13 +200,31 @@
       }
       
       .front .inner p {
-        font-size: 1.6rem;
+        font-size: 2rem;
         margin-bottom: 2rem;
-        color: #03b7fe;
+        color: black;
         text-align: center;
+        justify-content: center;
         position: relative;
+        font-weight: bolder;
       }
-      
+      /*Card's title*/
+      .p1{
+        margin-left: -15px;
+        margin-top: 20px;
+      }
+      .p2{
+        margin-top: 20px;
+      }
+      .p3{
+        margin-top: 20px;
+      }
+      .p4{
+        margin-top:0px;
+        margin-left: -15px;
+      }
+      /*end of card's title*/
+
       .front .inner p:after {
         content: '';
         width: 8rem;
@@ -170,11 +240,24 @@
       
       .inner a {
         text-decoration: none;
+        color:#fff;
+        font-weight:bold;
+        font-size: medium;
+        background-color: rgb(241, 11, 11);
+        padding:5px;
+        border:1px solid black;
       }
       
       .inner a:hover {
-        color: #fff;
+        color: rgb(250, 189, 59);
+        font-weight: bolder;
+        font-size: 22px;
+        padding:5px;
+        background-color: #c2e8f7;
         transition: all .3s;
+        border: 1px solid #410cd4;
+        border-radius: 25px;
+        text-shadow:-1px 0 black,0 1px black,1px 0 black,0 -1px black;
       }
 
       
