--- a/css/winners.css
+++ b/css/winners.css
@@ -1,22 +1,4 @@
-body{
-    width: 100%;
-    height:100%;
-}
-/* header */
-
-#main {
-  padding: 3% 3%;
-  margin-bottom: 30px;
-  padding-top: 2%;
-}
-.head{
-	padding:20px;
-}
-body{
-  font-family: 'Montserrat',  'sans-serif';
-  }
-  
-  header,
+ header,
   section {
     overflow-x: hidden;
     left: 100px;
@@ -274,7 +256,33 @@ body{
 
 /* header ended*/
 
-/* Footer/*
+
+
+/*body*/
+
+*{
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Montserrat',  'sans-serif';
+}
+.card-title {
+  font-size: 30px;
+  font-family: sans-serif;
+  font-weight: bold;
+  color: #27213c;
+  text-align: center;
+  /* padding: 3rem 1.5rem; */
+}
+.img{
+  height: 150px;
+  width: 150px;
+}
+
+/*body end*/
+
+
+
+/* Footer*/
 
 footer {
   background: rgba(0, 0, 0, 0.815);
