--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body{
 font-family: 'Montserrat',  'sans-serif';
 }
 
+.evebanner img{
+  width: 100%;
+}
+
 header,
 section {
   overflow-x: hidden;
