--- a/css/winners.css
+++ b/css/winners.css
@@ -1,249 +1,11 @@
- /*header*/
- /* section {
-    overflow-x: hidden;
-    left: 100px;
-  }
-  header img {
-      height: 80px;
-      margin-left: -110px;
-  }
-  
-  .container{
-    background-attachment: white;
-    width: 100%;
-  }
-  .section-0{
-    background-color: #37bbe454;
-    text-align: center;
-    width: 100%;
-    font-family: Montserrat;
-    font-size: small;
-  }
-  
-  .section-0 img{
-    height: 300px;
-  }
-  
-  
-  .container-hero
-  {
-    background-color: rgb(192, 198, 201);
-    padding-left: 3%;
-    text-align: center;
-  }
-   
-  
-  .my-button{
-    width:200px;
-    height:80px;
-    font-size:30px;
-    background-color:#6ab1bc;
-    color: black;
-    border:0px;
-    margin-right: 100px;
-    box-shadow: 1px rgb(121, 116, 116);;
-    border-radius: 10px;
-    margin-left: 230px;
-    text-size-adjust: 40;
-    display: inline-block;
-    position: relative;
-  }
-  .my-button-2{
-    width:200px;
-    height:80px;
-    font-size:30px;
-    background-color:#e8da5f;
-    color: black;
-    border:0px;
-    margin-right: 130px;
-    box-shadow: 10px rgb(96, 93, 93);
-    border-radius: 10px;
-    margin-left: 100px;
-    text-size-adjust: 40;
-    display: inline-block;
-  }
-  .my-button-3{
-    width:200px;
-    height:80px;
-    font-size:30px;
-    font-family: 'Times New Roman', Times, serif;
-    background-color:#ad77aa;
-    color: black;
-    border:0px;
-    box-shadow: 1px rgb(121, 116, 116);
-    border-radius: 10px;
-    margin-right: 100px;
-    display: inline-block;
-  }
-  .overlay{
-    text-align: center;
-    font-size: medium;
-    
-  }
-  .gallery{
-    display: flex;
-    justify-content: center;
-    top: 40px;
-    align-items: center;
-   
-  }
-  
-  .gallery-section{
-    position: relative;
-  }
-  .gallery-section img{
-    width: 150%;
-    height: 40%;
-    position: absolute;
-  }
-  .Image1{
-    left: 5em;
-  }
-  .Image2{
-    left: 10rem;
-    top: 1rem;
-  }
-  .Image3{
-    left: 15rem;
-    top: 2rem;
-  }
-  .gallery-section img:hover{
-    z-index:20;
-    
-  }
-  .gallery-section:hover img:not(:hover){
-    transform:scale(.9)
-  }
-  @media screen and (max-width:500px){
-    .Image1{
-      left:5rem;
-    }
-    .Image2{
-      left:7rem;
-    }
-    .Image3{
-      left:10rem;
-    }
-  }
-  .gallery-item-1:hover{
-    transform: scale(1.1);
-  }
-  .gallery-item{
-    border-radius: 0%;
-     margin-top: 50;
-     margin-left: 50;
-     margin-right: 50;
-     margin-bottom: 50;
-     height: 70vh;
-     transition: transform 0.3s ease-in-out;
-  }
-  p{
-     text-align: justify;
-     font-size: medium;
-     display: block;
-  }
-  .bannertext{
-    margin-top: 80px;
-    margin-bottom: 80px;
-  }
-  .bannerimage{
-    margin-top: 80px;
-    margin-bottom: 80px;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: whitesmoke;
-    min-width: 160px;
-    box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
-    z-index: 11;
-  }
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #dee2e6;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  header .nav-item:last-child {
-    padding-right: 10.5em;
-  }
-  
-  .logoimg{
-    vertical-align: middle;
-    border-style: none;
-    height: 80px;
-    width: auto;
-    padding-left: 2rem;
-  }
-  
-  header .nav-link:hover {
-    color: black;
-  }
-  
-  .nav-item a {
-    color: black;
-  }
-  
-  .nav-item a:hover {
-    color: black;
-    text-decoration: none;
-  }
- 
-  
-   header .row .col-md-7 {
-    padding: 22vmin 1vmin;
-    padding-bottom: 35vmin;
-  }
-  
-  header .row .col-md-5 {
-    padding: 4.2vmin 1vmin;
-  }
-  
-  header .row .col-md-5 img {
-    width: 90%;
-  }
-  
-  header .container .col-md-7 h6 {
-    padding: 1vmin;
-    letter-spacing: 4px;
-  }
-  
-  header .container .col-md-7 h1 {
-    font-size: 8.5vmin;
-    font-weight: bold;
-    padding: 0.1em 0em;
-  }
-  
-  header .container .col-md-7 p {
-    padding: 1vmin 5vmin;
-  } 
-  .primary-btn {
-    border-radius: 30px;
-    font-weight: bold;
-  }
-
-*/
-
-/* header ended*/
-
-
-
 /*body*/
-
 *{
   margin: 0px;
   padding: 0px;
   font-family: 'Montserrat',  'sans-serif';
+}
+.clearfix{
+	clear: both;
 }
 .main{
   display: flex;
@@ -251,7 +13,7 @@
   height: 100vh;
   align-items: center;
 }
-.container{
+.container1{
   display: flex;
 }
 .card{
