--- a/css/winners.css
+++ b/css/winners.css
@@ -1,4 +1,57 @@
 /*body*/
+/*main section*/
+  /*Images*/
+  .img_p{
+    height:500px;
+    width:350px;
+    overflow: hidden;
+  }
+  .container{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+  }
+  .intro{
+    height:70px;
+    width: 350px;
+    padding: 6px;
+    box-sizing:border-box;
+    position: absolute;
+    background: rgb(27,27,27,.5);
+    color:white;
+    bottom:240px;
+    transition: .5s;
+  }
+  h1{
+    margin:10px;
+    font-size: 40px;
+  }
+  p{
+    font-size:20px;
+    margin:20px;
+    visibility:hidden;
+    opacity:0;
+  }
+  span{
+    font-weight:bold;
+  }
+  .card:hover{
+    cursor:pointer;
+  }
+  .card:hover .intro{
+    height:220px;
+    bottom:240px;
+    background: black ;
+  }
+  .card:hover p{
+    visibility: visible;
+    opacity: 1;
+  }
+  .card:hover .img_p{
+      transform: scale(1.1) rotate(-3deg);
+  }
+
 *{
   margin: 0px;
   padding: 0px;
@@ -7,11 +60,15 @@
 .clearfix{
 	clear: both;
 }
+.body{
+  width:100%;
+  height:100%;
+  margin:0px;
+  padding:0px;
+}
 .main{
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  align-items: center;
+  width:100%;
+  height:100%;
 }
 .container1{
   display: flex;
