--- a/css/winners.css
+++ b/css/winners.css
@@ -590,12 +590,14 @@ i{
     margin-left:0px;
   }
   .card{
-    display: flex;
     justify-content: center;
     align-items: center;
     margin-top:0px;
-    height:100%;
-    width: auto;
+    height:450px;
+  }
+  .card div{
+    display: flex;
+    flex-direction: row;
   }
   .intro{
     height:70px;
@@ -644,7 +646,7 @@ i{
     color:white;
   }
   .card:hover .img_p{
-      transform: scale(1.1) rotate(-3deg);
+      transform: scale(1.1) rotate(0deg);
   }
 
 
@@ -673,6 +675,13 @@ i{
 .container3 {
   display: flex;
   flex-direction: row;
-  margin-left:10px;
-  margin-top:0px;
+  margin-top:-400px;
 }
+.container2{
+  margin-top:-400px;
+}
+.container1{
+  margin-top:30px;
+}
+
+.container3 .card1{}
