--- a/css/winners.css
+++ b/css/winners.css
@@ -6,12 +6,23 @@
     width:350px;
     overflow: hidden;
   }
-  .container1.container3.container2{
-    display: flex;
+  .container1.container3{
+    display:grid;
     justify-content: center;
     height: 70vh;
     align-items: center;
+    grid-template-columns:1;
   }
+  .container2{
+    display:grid;
+    justify-content: center;
+    height: 70vh;
+    align-items: center;
+    grid-template-columns:3, minmax(225px,1fr);
+    grid-auto-rows: 3;
+  }
+  
+
   .intro{
     height:70px;
     width: 350px;
@@ -65,6 +76,7 @@
   height:100%;
   margin: 5px;
   padding:0px;
+  display:grid
 }
 .main{
   width:100%;
@@ -73,30 +85,57 @@
 .container1{
   display: flex;
 }
-.card{
-  height: 100px ;
-  width: 100px;
-  margin: 400px;
-  box-shadow: 5px 5px 20px black;
-  overflow: hidden ;
+.container2{
+  display: flex;
 }
-.card-title {
-  font-size: 30px;
-  font-family: sans-serif;
-  font-weight: bold;
-  color: #27213c;
+.container3{
+  display: grid;
+  grid-template-columns: 3;
+  grid-template-rows: 1;
+  grid-row: 1;
+  grid-column: 3;
+}
+
+.card1 {
+  width: 300px;
+  height: 300px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px #ccc;
   text-align: center;
-  /* padding: 3rem 1.5rem; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.img{
-  height: 500px;
-  width: 350px;
-  border-radius: 3px;
+
+.card1 img {
+  margin-top: 10px;
+  width: 200px;
+  height: 200px;
+  border-radius: 5px 5px 0 0;
 }
-.intro{
-  height: 70px;
-  width: 350px;
+
+.card1 h3 {
+  margin: 0px;
+  font-weight: 400px;
 }
+.container1.h2{
+  font-weight: 500px;
+}
+.container2.h2{
+  font-weight: 500px;
+}
+.container3.h2{
+  font-weight: 500px;
+}
+.card1 p {
+  margin: 0px;
+}
+
+
+
+
+
+
 
 /*body end*/
 
