Update in Collaborator Page

--- a/css/collaborator.css
+++ b/css/collaborator.css
@@ -1,62 +1,20 @@
-.aboutsection{
-    margin-top: 18px;
-    margin-left: -60px;
-    text-align: left;
+.collaborator_section {
+    margin-top: 60px;
 }
-form {
-    /* background-color: rgb(110, 187, 236); */
-    background-color: #bde9f6;
-    /* max-width: 700px; */
-    margin-top: 50px ;
-    margin-left: 50px;
-    margin-right: -120px;
-    padding: 30px 20px;
-    box-shadow: 2px 5px 10px rgb(0, 0, 0, 0.5);
-}
-form h4{
+
+.formarea {
     text-align: center;
-    color: #000000;
 }
-img{
-    height: 420px;
-    width: 400px;
-    width: 100%;
-}
-.form-control {
+
+.imagearea {
     text-align: center;
-    margin-bottom: 2px;
 }
 
-.form-control input[type="checkbox"] {
-    display: inline-block;
-    width: auto;
+.imagearea img {
+    height: 300px;
+    width: 350px;
 }
 
-.form-control input[type="checkbox"] {
-    display: inline-block;
-    width: auto;
+.collaborator_bottom {
+    margin-bottom: 60px;
 }
-
-.button {
-    background: #0b67e0;
-    color: #fff;
-    border: 0.5px solid #0b67e0 ;
-    border-radius: 10px;
-    /* box-shadow: 5px 5px 5px #eee;
-    text-shadow: none; */
-}
-
-.button:hover {
-    background: #3b93ff;
-    color: #fff;
-    border: 1px solid #3b93ff;
-    border-radius: 20px;
-
-}
-#newsletter{
-display: inline;
-background-color: rgb(1,1,1,0);
-box-shadow: none;
-
-}
-
